test/classes/errors/nilability-return-yield/return-shared.good
return-shared.chpl:3: In function 'P':
return-shared.chpl:3: error: Cannot initialize 'shared C' from a 'shared C?'
